Closed Bug 761979 Opened 13 years ago Closed 13 years ago

nsfilestreams.cpp(817) : warning C4700: uninitialized local variable 'rv' used

Categories

(Core :: Networking: File, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

817 nsresult rv; 818 if (NS_FAILED(rv)) return rv;
Attached patch fixSplinter Review
Attachment #630500 - Flags: review?(Jan.Varga)
Comment on attachment 630500 [details] [diff] [review] fix this was introduced by bug 749930 anyway, r=me
Attachment #630500 - Flags: review?(Jan.Varga) → review+
Comment on attachment 630500 [details] [diff] [review] fix Review of attachment 630500 [details] [diff] [review]: ----------------------------------------------------------------- Looks fine to me too (in general, make sure to get a review from a necko peer for patches that touch necko code--though this one really is pretty easy to review :) Let me know if you can land this, or I can do it for you. cheers
Attachment #630500 - Flags: review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: