Bug 761979 - nsfilestreams.cpp(817) : warning C4700: uninitialized local variable 'rv' used. r=janv, jduell